--- a/frontend/styles/etc/Loading.module.css
+++ b/frontend/styles/etc/Loading.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -14,5 +14,6 @@
 }
 
 .image_container {
+    position: relative;
     width: 40%;
 }
