--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -84,17 +84,17 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: 'Noto Sans JP', sans-serif;
-
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+  background-color: #29183a;
 }
 
 a {
@@ -106,6 +106,85 @@ a {
 li {
   list-style: none;
 }
+
+h1, h2, h3 {
+  text-align: center;
+}
+
+h1, h2, p {
+  color: #fff;
+}
+
+h1 {
+  font-size: 35px !important;
+  font-weight: 700 !important;
+  line-height: 1.1 !important;
+  opacity: 0.9;
+  margin-bottom: 15px !important;
+}
+
+h2 {
+  font-size: 25px !important;
+  font-weight: 500 !important;
+  opacity: 0.85;
+  margin-bottom: 15px !important;
+}
+
+h3 {
+  font-size: 20px !important;
+  font-weight: 500 !important;
+  line-height: 1.2 !important;
+  opacity: 0.85;
+  margin-bottom: 15px !important;
+}
+
+p {
+  opacity: 0.8;
+  line-height: 1.5 !important;
+}
+
+
+@media screen and (min-width: 768px) {
+  h1 {
+      font-size: 45px !important;
+      margin-bottom: 20px !important;
+  }
+
+  h2 {
+    font-size: 35px !important;
+    margin-bottom: 25px !important;
+  }
+
+  h3 {
+    font-size: 25px !important;
+    /* margin-bottom: 15px !important; */
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  h1 {
+      font-size: 55px !important;
+      margin-bottom: 20px !important;
+  }
+
+  h2 {
+    font-size: 45px !important;
+    margin-bottom: 35px !important;
+  }
+
+  h3 {
+    font-size: 30px !important;
+    margin-bottom: 12px !important;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+    h1 {
+        font-size: 65px !important;
+        margin-bottom: 25px !important;
+    }
+}
+
 
 @media (prefers-color-scheme: dark) {
   html {
