--- a/frontend/styles/ui/button.module.css
+++ b/frontend/styles/ui/button.module.css
@@ -14,6 +14,14 @@
     cursor: pointer;
 }
 
+/* ScrollToTopButton */
+.scroll_to_top {
+    position: fixed !important;
+    bottom: 5%;
+    right: 5%;
+    z-index: 1000;
+}
+
 @media screen and (min-width: 768px) {
     .hamburger {
         width: 50px;
