--- a/frontend/styles/layout/Layout.module.css
+++ b/frontend/styles/layout/Layout.module.css
@@ -7,7 +7,7 @@
     width: 100%;
     background-color: rgba(15,9,30,.5);
     backdrop-filter: blur(50px);
-    z-index: 8888;
+    z-index: 8000;
 }
 
 .row {
@@ -17,22 +17,18 @@
     height: 65px;
 }
 
-.logo h1 {
-    font-size: 24px;
-}
 
 /* Navigation */
 .navigation {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 35px;
 }
-
 .navigation li {
     position: relative;
 }
-
 .navigation a::after {
     position: absolute;
     left: 0;
@@ -49,16 +45,38 @@
     transform: scale(1, 1);
 }
 
-.drawer_nav {
-    flex-direction: column;
-    gap: 35px;
-    height: 100%;
-}
 
 .logo,
 .navigation {
     color: #fff;
     font-weight: bold;
+}
+
+.logo strong {
+    font-size: 25px;
+    font-weight: 700;
+    opacity: 0.85;
+}
+
+
+/* Drawer */
+.paper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 100%;
+    background-color: #281D41;
+}
+
+.close_container {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 16px;
+    height: 65px;
 }
 
 
@@ -68,10 +86,21 @@
         height: 70px;
     }
 
-    .logo h1 {
+    .logo strong {
         font-size: 30px;
     }
 }
 
 @media screen and (min-width: 1024px) {
+    /* Header */
+    .logo strong {
+        font-size: 35px;
+    }
+
+
+    /* Navigation */
+    .navigation {
+        flex-direction: row;
+        gap: 25px;
+    }
 }
