--- a/frontend/styles/etc/Sending.module.css
+++ b/frontend/styles/etc/Sending.module.css
@@ -10,6 +10,10 @@
     z-index: 9500;
 }
 
+.sending_visible {
+    display: none;
+}
+
 .sending_container {
     display: flex;
     flex-direction: column;
