--- a/frontend/styles/Contact.module.css
+++ b/frontend/styles/Contact.module.css
@@ -13,6 +13,25 @@
     margin: 0;
 }
 
+.end_form {
+    height: 450px;
+}
+
+/* 送信完了後のメッセージ */
+.txt_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.txt_container h2 {
+    opacity: 0.9;
+}
+.txt_container p {
+    opacity: 0.75;
+}
+
 .contact_txt,
 .form_container {
     display: flex;
@@ -21,6 +40,7 @@
     align-items: center;
     width: 100%;
 }
+
 
 /* StepBar */
 .step_progress_bar_container,
@@ -196,6 +216,11 @@ input[type='email']#input-email,
 }
 
 @media screen and (min-width: 768px) {
+    .end_form {
+        height: 550px;
+    }
+
+
     /* StepBar */
     .step_progress_bar_container {
         margin-top: 20px;
