--- a/frontend/styles/etc/Loading.module.css
+++ b/frontend/styles/etc/Loading.module.css
@@ -1,4 +1,39 @@
+/* ViewerLoading */
 .loading {
+    width: 100%;
+    height: 100%;
+}
+
+.image_container {
+    position: relative;
+    width: 40%;
+}
+
+
+/* PageLoading */
+.page_loading {
+    width: 100vw;
+    height: 100vh;
+}
+
+.page_loading_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+}
+.loading_text {
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #fff;
+    opacity: 0.9;
+    margin-bottom: 12px;
+}
+
+
+.loading,
+.page_loading {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,13 +42,20 @@
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
-    height: 100%;
+    z-index: 8500;
     background: radial-gradient(circle,#090e37 7%,#1b073d 51%,#1e0928 84%,#150624 100%);
-    z-index: 99999;
 }
 
-.image_container {
-    position: relative;
-    width: 40%;
+@media screen and (min-width: 768px) {
+    .loading_text {
+        font-size: 50px;
+        margin-bottom: 16px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .loading_text {
+        font-size: 60px;
+        margin-bottom: 18px;
+    }
 }
