--- a/frontend/styles/etc/Sending.module.css
+++ b/frontend/styles/etc/Sending.module.css
@@ -7,6 +7,7 @@
     height: 100%;
     background-color: rgba(15,9,30,.5);
     backdrop-filter: blur(50px);
+    margin-bottom: 30px;
     z-index: 9500;
 }
 
