--- a/frontend/styles/global.module.css
+++ b/frontend/styles/global.module.css
@@ -1,22 +1,24 @@
-.global_root_container {
+.root_container {
     padding: 40px 0;
 }
 
-.global_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.top_container {
     margin-top: 65px;
 }
 
-.global_shadow_container {
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.shadow_container {
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     box-shadow: 3px 3px 6px #110e1d, -5px -5px 10px #221740;
     border-radius: 15px;
-    margin-top: 65px;
     padding: 25px 15px;
 }
 
@@ -32,11 +34,11 @@
 
 /* WorkCard */
 .card {
-    transform: scale(1);
-    transition: transform 0.35s, box-shadow 0.35s;
+    transform: scale(1, 1);
+    transition: all 0.5s;
 }
 .card:hover {
-    transform: scale(1.1);
+    transform: scale(1.05, 1.05);
     box-shadow: 15px 15px 40px 2px rgba(0, 0, 0, 0.25);
 }
 
@@ -52,33 +54,32 @@
 
 
 @media screen and (min-width: 768px) {
-    .global_root_container {
+    .root_container {
         padding: 60px 0;
     }
 
-    .global_container {
+    .top_container {
         margin-top: 70px;
     }
 
-    .global_shadow_container {
+    .shadow_container {
         border-radius: 15px;
         box-shadow:  7px 7px 15px #110e1d, -7px -7px 15px #292043;
         padding: 40px 35px;
-        margin-top: 70px;
     }
 }
 
 @media screen and (min-width: 1024px) {
-    .global_root_container {
+    .root_container {
         padding: 80px 0;
     }
 
-    .global_container {
+    .container {
         flex-direction: row;
         justify-content: space-between;
     }
 
-    .global_shadow_container {
+    .shadow_container {
         flex-direction: row;
         justify-content: space-between;
         padding: 50px 35px;
