--- a/frontend/styles/works/work/modelViewer/Controls.module.css
+++ b/frontend/styles/works/work/modelViewer/Controls.module.css
@@ -1,7 +1,9 @@
 .controls {
     display: flex;
+    position: relative;
     height: 100%;
     min-height: 100vh;
+    z-index: 100;
 }
 
 .controls section {
@@ -17,7 +19,7 @@
     align-items: center;
     position: relative;
     height: 100%;
-    padding: 35px 0 0 0;
+    padding: 40px 0;
 }
 
 .controls h2,
