--- a/frontend/styles/works/work/modelViewer/Introduction.module.css
+++ b/frontend/styles/works/work/modelViewer/Introduction.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    position: relative;
     width: 100%;
     height: 100vh;
 }
@@ -13,13 +14,17 @@
     position: relative;
     height: 100%;
     text-align: center;
-    padding: 20px 0;
+    padding: 60px 0;
     margin: 0 auto;
 }
 .introduction section > h2,
 .introduction section > p {
     position: relative;
     text-shadow: 3px 3px 15px rgb(0, 0, 0);
+}
+
+.not_active {
+    z-index: 100;
 }
 
 @media screen and (min-width: 768px) {
