--- a/frontend/styles/about/SkillList.module.css
+++ b/frontend/styles/about/SkillList.module.css
@@ -3,7 +3,9 @@
     flex-direction: column;
     justify-content: center;
     gap: 30px;
+    position: relative;
     width: 100%;
+    overflow: hidden;
 }
 
 .skill_list_container {
