--- a/frontend/styles/works/work/modelViewer/Controls.module.css
+++ b/frontend/styles/works/work/modelViewer/Controls.module.css
@@ -1,8 +1,8 @@
 .controls {
     display: flex;
     position: relative;
-    height: 100%;
-    min-height: 100vh;
+    height: 680px;
+    overflow: hidden;
     z-index: 100;
 }
 
@@ -19,7 +19,6 @@
     align-items: center;
     position: relative;
     height: 100%;
-    padding: 40px 0;
 }
 
 .controls h2,
@@ -66,20 +65,14 @@
     opacity: 1;
 }
 
-@media screen and (min-width: 768px) {
-    .controls > div > div {
-        padding: 0;
-    }
-}
-
 @media screen and (min-width: 1024px) {
     .controls {
         height: auto;
+        min-height: 100vh;
     }
     .controls > div > div {
         flex-direction: column;
         justify-content: center;
-        align-items: center;
         text-align: center;
         margin: 0 auto;
     }
@@ -91,15 +84,5 @@
 
     .control_list {
         padding: 5px 5px 10px 5px;
-    }
-
-    .controls > div > div {
-        padding: 0;
-    }
-}
-
-@media screen and (min-width: 1536px) {
-    .controls { 
-        aspect-ratio: 16/9;
     }
 }
