--- a/frontend/styles/global.module.css
+++ b/frontend/styles/global.module.css
@@ -37,7 +37,7 @@
 /* WorkCard */
 .card {
     transform: scale(1, 1);
-    transition: all 0.5s;
+    transition: all 0.5s !important;
 }
 .card:hover {
     transform: scale(1.05, 1.05);
