--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -2,7 +2,6 @@
 .portal {
   position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
   right: 0;
   height: 100vh;
@@ -11,13 +10,14 @@
 }
 
 .canvas {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+/* Figcaption */
+.figcaption {
+  align-items: center;
 }
 
 
