--- a/frontend/styles/works/work/normalViewer/MainImage.module.css
+++ b/frontend/styles/works/work/normalViewer/MainImage.module.css
@@ -1,21 +1,25 @@
 .main_image {
+    margin-top: 15px;
     margin-bottom: 35px;
 }
 
 @media screen and (min-width: 768px) {
     .main_image {
+        margin-top: 20px;
         margin-bottom: 45px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .main_image {
+        margin-top: 25px;
         margin-bottom: 60px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .main_image {
+        margin-top: 30px;
         margin-bottom: 80px;
     }
 }
