--- a/frontend/styles/works/work/index.module.css
+++ b/frontend/styles/works/work/index.module.css
@@ -40,6 +40,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    opacity: 0;
 }
 .figcaption h1,
 .figcaption p {
