--- a/frontend/styles/works/work/normalViewer/MainImage.module.css
+++ b/frontend/styles/works/work/normalViewer/MainImage.module.css
@@ -1,4 +1,8 @@
 .main_image {
+    position: relative;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
     margin-top: 15px;
     margin-bottom: 35px;
 }
